--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,32 @@
 h1{
-    background-color: beige;
+    background-color: #edd9bb;
+    color: #371d13;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 80px;
+    font-size: 90px;
+    padding: 40px;
+    margin: 40px 500px;
 }
 h2{
-    background-color: burlywood;
+    background-color: #deb887;
+    padding: 20px;
+    margin: 40px 800px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
     font-size: 30px;
+    color: #371d13;
     
 }
 ul h3{
-    background-color: rgb(245, 245, 226);
+    background-color: #f6edde;
+    padding: 10px;
+    margin: 50px 600px;
     text-align: center;
     font-size: 32px;
 }
 ul h3 a{
-    color: brown;
+    background-color: #edd9bb;
+    padding: 10px 28px;
+    color: #663b28;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
